--- a/styles.css
+++ b/styles.css
@@ -8,5 +8,35 @@
 }
 
 body {
-  background-color: lightblue;
+  background-color: #fffff2;
+}
+
+hr {
+  border-style: dotted none none;
+  height: 0;
+  border-width: 7px;
+  border-color: grey;
+  width: 10%;
+
+}
+
+h1 {
+  color: #66BFBF;
+}
+
+h2 {
+  color: #66BFBF;
+}
+
+h3 {
+  color: #66BFBF;
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
+
+.table1 {
+  align-content: center;
 }
